--- a/package.json
+++ b/package.json
@@ -1,5 +1,15 @@
 {
+  "script": {
+    "start": "node app.js"
+  },
   "dependencies": {
+    "axios": "^1.4.0",
     "koa": "^2.14.2"
-  }
+  },
+  "name": "splitify",
+  "version": "1.0.0",
+  "description": "splitwise mod: add an extension to splitwise",
+  "main": "index.js",
+  "repository": "git@github.com:sandipan-basak/splitify.git",
+  "author": "sandipan"
 }
