--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
-    "koa": "^2.14.2"
+    "koa": "^2.14.2",
+    "koa-router": "^12.0.0"
   },
   "name": "splitify",
   "version": "1.0.0",
