--- a/package.json
+++ b/package.json
@@ -1,16 +1,26 @@
 {
-  "script": {
-    "start": "node app.js"
+  "name": "splitify",
+  "scripts": {
+    "start": "ts-node --esm src/app.ts"
   },
   "dependencies": {
     "axios": "^1.4.0",
     "koa": "^2.14.2",
-    "koa-router": "^12.0.0"
+    "koa-router": "^12.0.0",
+    "koa-bodyparser": "^4.3.10",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.6"
   },
-  "name": "splitify",
   "version": "1.0.0",
   "description": "splitwise mod: add an extension to splitwise",
   "main": "index.js",
   "repository": "git@github.com:sandipan-basak/splitify.git",
-  "author": "sandipan"
+  "author": "sandipan",
+  "devDependencies": {
+    "@types/koa": "^2.13.6",
+    "@types/koa-bodyparser": "^4.3.10",
+    "@types/koa-router": "^7.4.4",
+    "@types/node": "^20.4.1",
+    "nodemon": "^3.0.1"
+  }
 }
